# rust-gpu-compute

./: Cargo.toml  README.md
app/: Cargo.toml  build.rs
app/src/: compute.rs  cpu.rs  main.rs
shader/: Cargo.toml
shader/src/: lib.rs
shared/: Cargo.toml
shared/src/: lib.rs
test_k256/: Cargo.toml
test_k256/src/: error.rs  hasher.rs  lib.rs  public.rs  secret.rs  signature_format.rs
test_secp256k1/: Cargo.toml
test_secp256k1/src/: lib.rs
