[workspace]
resolver = "2"
members = [
    "app", "shader", "shared", 
# "test_secp256k1",
"test_k256"
]

[workspace.package]
version = "0.1.0"
authors = ["Josh Batty <joshpbatty@gmail.com>"]
edition = "2021"
license = "MIT OR Apache-2.0"


[workspace.dependencies]
spirv-std = { git = "https://github.com/EmbarkStudios/rust-gpu" }
spirv-builder = { git = "https://github.com/EmbarkStudios/rust-gpu", default-features = false }

# spirv-builder = { path = "./crates/spirv-builder", version = "=0.9.0", default-features = false }
# # spirv-std = { path = "./crates/spirv-std", version = "=0.9.0" }
# spirv-std-types = { path = "./crates/spirv-std/shared", version = "=0.9.0" }
# spirv-std-macros = { path = "./crates/spirv-std/macros", version = "=0.9.0" }
# spirv-tools = { version = "0.10", default-features = false }
# rustc_codegen_spirv = { path = "./crates/rustc_codegen_spirv", version = "=0.9.0", default-features = false }
# rustc_codegen_spirv-types = { path = "./crates/rustc_codegen_spirv-types", version = "=0.9.0" }

# Enable incremental by default in release mode.
[profile.release]
incremental = true
# HACK(eddyb) this is the default but without explicitly specifying it, Cargo
# will treat the identical settings in `[profile.release.build-override]` below
# as different sets of `rustc` flags and will not reuse artifacts between them.
codegen-units = 256

# Compile build-dependencies in release mode with the same settings
# as regular dependencies (including the incremental enabled above).
[profile.release.build-override]
opt-level = 3
incremental = true
codegen-units = 256
