[package]
name = "fuel-crypto-shared"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
name = "shared"
path = "./src/lib.rs"

[dependencies]
spirv-std = { workspace = true }

############################################
#fuel-crypto = { path = "../../fuel-vm/fuel-crypto", default-features = false }

# coins-bip32 = { version = "0.8", default-features = false, optional = true }
# coins-bip39 = { version = "0.8", default-features = false, features = ["english"], optional = true }
# ecdsa = { version = "0.16", default-features = false }
# # ed25519-dalek = { version = "2.0.0", default-features = false }
# fuel-types = { path = "../../fuel-vm/fuel-types", default-features = false }
# # k256 =  { version = "0.13", default-features = false, features = ["digest", "ecdsa"] }
# lazy_static = { version = "1.4", optional = true }
# # p256 =  { version = "0.13", default-features = false, features = ["digest", "ecdsa"] }
# rand = { version = "0.8", default-features = false, optional = true }
# # `rand-std` is used to further protect the blinders from side-channel attacks and won't compromise
# # the deterministic arguments of the signature (key, nonce, message), as defined in the RFC-6979
# secp256k1 = { version = "0.26", default-features = false, features = ["rand-std", "recovery"], optional = true }
# serde = { version = "1.0", default-features = false, features = ["derive"], optional = true }
# sha2 = { version = "0.10", default-features = false }
# # zeroize = { version = "1.5", features = ["derive"] }
