[package]
name = "test_k256"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
k256 = { path = "../../../crates/elliptic-curves/k256", default-features = false, features = ["digest", "ecdsa", "sha256"] }
rand = { version = "0.8", default-features = false }
fuel-types = { path = "../../fuel-vm/fuel-types", default-features = false }